<resources>
    <string name="app_name">AC Repair Preview</string>
    <string name="change_language">Change Language / غير اللغة</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="orconnectwith">Or connect with</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don’t have an Account?</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="phonenumber">Phone Number</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="login">Login</string>
    <string name="english">English</string>
    <string name="arabic">عربى</string>
    <string name="arabicinenglish">Arabic</string>
    <string name="continues">Continue / استمر</string>
    <string name="we_have_sent_you_access_code_via_sms_for_mobile_number_verification">We have sent you access code
        via SMS for mobile number verification</string>
    <string name="enter_otp">ENTER OTP</string>
    <string name="didn_t_receive_the_otp">Didn’t receive the OTP?</string>
    <string name="submit">Submit</string>
    <string name="resend_code">Resend code</string>
    <string name="your_location">Your Location</string>
    <string name="our_services">Our Services</string>
    <string name="ac_services">AC Services</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="aboutus">About Us</string>
    <string name="termsandcondition">Terms &amp; Condition</string>
    <string name="privacyandpolicy">Privacy &amp; Policy</string>
    <string name="cancellationpolicy">Cancellation Policy</string>
    <string name="faq">FAQ</string>
    <string name="contactus">Contact Us</string>
    <string name="feedback">Feedback</string>
    <string name="appsharing">App Sharing</string>
    <string name="rateus">Rate Us</string>
    <string name="logout">Logout</string>
    <string name="ac_installation_remove">AC Installation/ Remove</string>
    <string name="athome">at Home</string>
    <string name="price">\@ Rs 199/-</string>
    <string name="_5_0">5.0</string>
    <string name="demo_name">Demo Name</string>
    <string name="north_udaipur_20th_december_2019">North Udaipur, 20th December 2019</string>
    <string name="great_service_very_polite">Great service, very polite.</string>
    <string name="review_title">What our customers say</string>
    <string name="top_offer">Top Offer</string>
</resources>
